--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,11 @@
         android:theme="@style/Theme.BoiiMela"
         tools:targetApi="31">
         <activity
-            android:name=".splash_activity"
-            android:exported="true" >
+            android:name=".UploadActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
