--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,11 +48,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "com.airbnb.android:lottie:6.0.0"
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
-    implementation 'com.google.firebase:firebase-auth:21.2.0'
-    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
-    implementation 'com.google.firebase:firebase-firestore:24.1.1'
-    implementation 'com.google.firebase:firebase-storage:20.0.1'
+    implementation 'com.google.firebase:firebase-auth:21.3.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.0'
+    implementation 'com.google.firebase:firebase-firestore:24.5.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'com.firebaseui:firebase-ui:0.6.0'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
