--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,5 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui:0.6.0'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-    implementation 'com.github.medyo:android-about-page:1.1.1'
+    //implementation 'com.github.medyo:android-about-page:1.1.1'
 }
