--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
             android:name=".ChangePasswordActivity"
             android:exported="false" />
         <activity
+            android:name=".SecurityActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DeleteProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".UpdateEmailActivity"
             android:exported="false" />
         <activity
