--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'com.firebaseui:firebase-ui:0.6.0'
 
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+    implementation 'com.android.volley:volley:1.2.1'
+
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     //implementation 'com.github.medyo:android-about-page:1.1.1'
 }
