Some frontend changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:name=".UpdateProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".Settings"
+            android:name=".SettingsActivity"
             android:exported="false" />
         <activity
             android:name=".ForgotPasswordActivity"
