--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.twilio.sdk:twilio:8.17.0'
 
     implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
